[tool.poetry]
name = "nnfs"
version = "0.1.0"
description = ""
authors = ["witt3rd <donald@witt3rd.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.22.0"
scipy = "^1.7.3"
matplotlib = "^3.5.1"
manim = "^0.14.0"

[tool.poetry.dev-dependencies]
ipykernel = "^6.6.1"
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
